--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 .grid-container{
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-columns: 50% 1fr 1fr;
     gap: 10px 50px;
 }
 .grid-item{
