Media query para responsividad

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -5,12 +5,26 @@
 }
 .grid-container{
     display: grid;
-    grid-template-areas: 
+    /*grid-template-areas: 
     'header'
     'sidebar'
     'main'
-    'footer ';
+    'footer ';*/
+    grid-template-areas: 
+    'header header header'
+    'sidebar main main'
+    'footer footer footer';
     
+}
+@media (max-width: 768px){
+    .grid-container{
+        display: grid;
+        grid-template-areas: 
+        'header'
+        'sidebar'
+        'main'
+        'footer ';
+    }
 }
 .box{
     
@@ -28,4 +42,14 @@
 }
 .footer{
     grid-area: footer;
+}
+@media(min)
+.grid-container{
+    display: grid;
+    grid-template-areas: 
+    'header'
+    'sidebar'
+    'main'
+    'footer ';
+    
 }
